--- a/template.prod.html
+++ b/template.prod.html
@@ -19,5 +19,13 @@
       crossorigin
       src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"
     ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-router-dom@5.2.0/umd/react-router-dom.min.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/axios@0.20.0/dist/axios.min.js"
+    ></script>
   </body>
 </html>
