feat: reset loginState on page load

--- a/template.prod.html
+++ b/template.prod.html
@@ -27,5 +27,9 @@
       crossorigin
       src="https://unpkg.com/axios@0.20.0/dist/axios.min.js"
     ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/recoil@0.0.13/umd/recoil.min.js"
+    ></script>
   </body>
 </html>
